manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: 82187227
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 82187227
  template:
    metadata:
      labels:
        app: 82187227
    spec:
      containers:
        - name: 82187227
          image: cepgstapacr.azurecr.io/82187227
          ports:
          - containerPort: 8080
