manifests/base/service.yaml
apiVersion: v2
kind: Service
metadata:
    name: my-82187227
spec:
    ports:
    - port: 8080 
    selector:
        app: 82187227
